user login authontication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@
 #spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.open-in-view=false
 #spring.jpa.show-sql= true
+jwt.secret=e#s$p%o$r^t9
