--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-#spring.datasource.url = jdbc:mysql://localhost:3306/pos_react_spring?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password = 1234
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.ddl-auto = update
-#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-#spring.jpa.open-in-view=false
-#spring.jpa.show-sql= true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=500MB
 jwt.secret=e#s$p%o$r^t9
